# calibrated-prior

./: .gitignore  README.md  main.py  pyproject.toml  runDataSetup.py  startupDesktopDonglai.sh  venv_pytorch.yml
notebooks/: pca-gmm-posterior.ipynb  syntheticValidation.ipynb
src/: amortization.py  hamiltonianMC.py  hamiltonianMC_nf.py  ice.py  model.py  optimization.py  plotting.py  radar.py  utilities.py  validation.py
testing/: Autoencoder.py  autoencoder_testing.ipynb  flow_matching_testing.ipynb  normflows_testing.ipynb  ode_solver_modified.py  pytorch_autoencoder_testing.ipynb
testing/flow_matching_examples/: 2d_cnf_maximum_likelihood.ipynb  2d_discrete_flow_matching.ipynb  2d_flow_matching.ipynb  standalone_discrete_flow_matching.ipynb  standalone_flow_matching.ipynb
testing/normflows_examples/: glow_colab.ipynb  real_nvp_colab.ipynb
