[project]
name = "calibrated-prior"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "gmr>=2.0.3",
    "ipympl>=0.10.0",
    "ipywidgets>=8.1.8",
    "matplotlib>=3.10.9",
    "numpy>=2.4.6",
    "pandas>=3.0.3",
    "pyro-ppl>=1.9.1",
    "scikit-learn>=1.8.0",
    "scipy>=1.17.1",
    "torch>=2.12.0",
    "xarray>=2026.4.0",
]

[dependency-groups]
dev = [
    "ipykernel>=7.3.0",
]
